--- a/package.json
+++ b/package.json
@@ -1,25 +1,65 @@
 {
-  "name": "posts-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.2"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.2",
-    "@eslint/eslintrc": "^3"
-  }
+	"name": "posts-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"prepare": "husky install"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.15.1",
+		"@mui/material": "^5.15.1",
+		"@types/node": "20.10.5",
+		"@types/react": "18.2.45",
+		"@types/react-dom": "18.2.18",
+		"axios": "^1.6.2",
+		"geist": "^1.3.1",
+		"next": "14.0.4",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"typescript": "5.3.3"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^18.4.3",
+		"@commitlint/config-conventional": "^18.4.3",
+		"@stylistic/eslint-plugin-ts": "^1.5.1",
+		"@typescript-eslint/eslint-plugin": "^6.15.0",
+		"@typescript-eslint/parser": "^6.15.0",
+		"@eslint/eslintrc": "^3",
+		"@types/react-router-dom": "^5.3.3",
+		"concurrently": "^9.0.1",
+		"date-fns": "^4.1.0",
+		"env-cmd": "^10.1.0",
+		"eslint": "8.56.0",
+		"eslint-config-next": "14.0.4",
+		"eslint-define-config": "^2.1.0",
+		"eslint-import-resolver-node": "^0.3.9",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-jsx-a11y": "^6.8.0",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.12",
+		"eslint-plugin-stylelint": "^0.1.1",
+		"eslint-plugin-unused-imports": "^3.0.0",
+		"globals": "^15.10.0",
+		"husky": "^8.0.3",
+		"lint-staged": "^15.2.0",
+		"typescript-eslint": "^8.8.0",
+		"unplugin-auto-import": "^0.18.3"
+	},
+	"simple-git-hooks": {
+		"pre-commit": "npx lint-staged",
+		"commit-msg": "npx --no-install commitlint --edit $1"
+	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx}": [
+			"eslint --fix"
+		]
+	},
+	"proxy": "https://dummyjson.com"
 }
