chore: install classnames and clsx

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"@types/react": "18.2.45",
 		"@types/react-dom": "18.2.18",
 		"axios": "^1.6.2",
+		"classnames": "^2.5.1",
+		"clsx": "^2.1.1",
 		"geist": "^1.3.1",
 		"next": "14.0.4",
 		"react": "18.2.0",
@@ -27,11 +29,11 @@
 	"devDependencies": {
 		"@commitlint/cli": "^18.4.3",
 		"@commitlint/config-conventional": "^18.4.3",
+		"@eslint/eslintrc": "^3",
 		"@stylistic/eslint-plugin-ts": "^1.5.1",
+		"@types/react-router-dom": "^5.3.3",
 		"@typescript-eslint/eslint-plugin": "^6.15.0",
 		"@typescript-eslint/parser": "^6.15.0",
-		"@eslint/eslintrc": "^3",
-		"@types/react-router-dom": "^5.3.3",
 		"concurrently": "^9.0.1",
 		"date-fns": "^4.1.0",
 		"env-cmd": "^10.1.0",
