feat: toast notification

--- a/package.json
+++ b/package.json
@@ -14,23 +14,28 @@
 		"@emotion/styled": "^11.11.0",
 		"@mui/icons-material": "^5.15.1",
 		"@mui/material": "^5.15.1",
-		"@types/node": "20.10.5",
-		"@types/react": "18.2.45",
 		"@types/react-dom": "18.2.18",
 		"axios": "^1.6.2",
 		"classnames": "^2.5.1",
 		"clsx": "^2.1.1",
 		"geist": "^1.3.1",
+		"lodash": "^4.17.21",
 		"next": "14.0.4",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-toastify": "^11.0.2",
 		"typescript": "5.3.3"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^18.4.3",
 		"@commitlint/config-conventional": "^18.4.3",
 		"@eslint/eslintrc": "^3",
-		"@stylistic/eslint-plugin-ts": "^1.5.1",
+		"@next/eslint-plugin-next": "^15.1.3",
+		"@stylistic/eslint-plugin": "^2.12.1",
+		"@stylistic/eslint-plugin-ts": "^1.8.1",
+		"@types/lodash": "^4.17.13",
+		"@types/node": "20.10.5",
+		"@types/react": "18.2.45",
 		"@types/react-router-dom": "^5.3.3",
 		"@typescript-eslint/eslint-plugin": "^6.15.0",
 		"@typescript-eslint/parser": "^6.15.0",
@@ -43,15 +48,15 @@
 		"eslint-import-resolver-node": "^0.3.9",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-jsx-a11y": "^6.8.0",
-		"eslint-plugin-react": "^7.33.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react": "^7.37.1",
+		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.12",
 		"eslint-plugin-stylelint": "^0.1.1",
-		"eslint-plugin-unused-imports": "^3.0.0",
-		"globals": "^15.10.0",
+		"eslint-plugin-unused-imports": "^4.1.4",
+		"globals": "^15.14.0",
 		"husky": "^8.0.3",
 		"lint-staged": "^15.2.0",
-		"typescript-eslint": "^8.8.0",
+		"typescript-eslint": "^8.18.2",
 		"unplugin-auto-import": "^0.18.3"
 	},
 	"simple-git-hooks": {
