--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@mui/icons-material": "^5.15.1",
 		"@mui/material": "^5.15.1",
 		"@types/react-dom": "18.2.18",
+		"@vercel/analytics": "^1.4.1",
 		"axios": "^1.6.2",
 		"classnames": "^2.5.1",
 		"clsx": "^2.1.1",
